promises and queueing

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hello-blockstack",
+  "name": "Aodh",
   "version": "0.0.0",
-  "description": "A simple Blockstack app using ReactJS",
+  "description": "Serverless music streaming with Blockstack",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
