--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
   "name": "Aodh",
-  "version": "0.0.0",
-  "description": "Serverless music streaming with Blockstack",
+  "version": "0.0.1",
+  "description": "Free music streaming with Blockstack",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack -p"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://gitlab.com/c0rv0s/aodh"
+  },
+  "bugs": {
+    "url": "https://twitter.com/c0rv0s"
+  },
+  "homepage": "https://gitlab.com/c0rv0s/aodh/blob/master/README.md",
+  "author": "@c0rv0s",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "^4.5.4",
     "css-loader": "^0.28.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
     "path": "^0.12.7",
     "style-loader": "^0.16.1",
-    "url-loader": "^1.1.1",
-    "webpack": "^2.3.3",
+    "url-loader": "^1.1.2",
+    "webpack": "^3.12.0",
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
@@ -30,7 +38,7 @@
     "bootstrap": "^3.3.7",
     "react": "^15.5.4",
     "react-dom": "^15.6.2",
-    "react-dropzone": "^5.0.2",
+    "react-dropzone": "^5.1.1",
     "react-router-dom": "^4.3.1"
   }
 }
