--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "author": "@c0rv0s",
   "license": "MIT",
   "devDependencies": {
+    "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^6.4.1",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.5.4",
