--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack -p"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,29 +18,28 @@
   "author": "@c0rv0s",
   "license": "MIT",
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
+    "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
-    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "copy-webpack-plugin": "^4.5.4",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
     "path": "^0.12.7",
     "style-loader": "^0.16.1",
-    "url-loader": "^1.1.2",
-    "webpack": "^3.12.0",
+    "uglify-es-webpack-plugin": "^0.10.0",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
-    "blockstack": "^18.0.4",
+    "blockstack": "^0.17.1",
     "bootstrap": "^3.3.7",
     "react": "^15.5.4",
-    "react-dom": "^15.6.2",
     "react-dropzone": "^5.1.1",
-    "react-router-dom": "^4.3.1"
+    "react-dom": "^15.5.4",
+    "react-router-dom": "^4.2.2"
   }
 }
