--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -3,7 +3,7 @@
   "start_url": "localhost:8080",
   "description": "proof of concept decentralized music streaming",
   "icons": [{
-    "src": "http://localhost:8080/icon-192x192.png",
+    "src": "images/icon-192x192.png",
     "sizes": "192x192",
     "type": "image/png"
   }]
