--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -1,9 +1,8 @@
 {
   "name": "Aodh",
-  "start_url": "aodh.xyz",
   "description": "proof of concept decentralized music streaming",
   "icons": [{
-    "src": "images/icon-192x192.png",
+    "src": "http://aodh.xyz/images/icon-192x192.png",
     "sizes": "192x192",
     "type": "image/png"
   }]
