fixed loading message

--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -3,7 +3,7 @@
   "start_url": "aodh.xyz",
   "description": "proof of concept decentralized music streaming",
   "icons": [{
-    "src": "http://aodh.xyz/images/icon-192x192.png",
+    "src": "https://aodh.xyz/images/icon-192x192.png",
     "sizes": "192x192",
     "type": "image/png"
   }]
