--- a/package.json
+++ b/package.json
@@ -35,8 +35,13 @@
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "blockstack": "^0.17.1",
     "bootstrap": "^3.3.7",
+    "i": "^0.3.6",
+    "npm": "^6.5.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-dropzone": "^5.1.1",
